--- a/PeopleLoader/App.config
+++ b/PeopleLoader/App.config
@@ -14,6 +14,7 @@
     </startup>
   <appSettings>
     <add key="ESConnection" value="http://localhost:9200" />
+    <add key="NewtonsoftJsonSchemaLicense" value="xx-xx==" />
     <add key="WebAppDataPath" value="d:\repos\HlidacStatu\HlidacStatu\Web.Statu\App_Data" />
     <add key="DumpsPath" value="d:\repos\HlidacStatu\Data\_dumps" />
     <add key="CnnString" value="data source=.;initial catalog=Firmy;persist security info=True;user id=firmy;password=hlidac;MultipleActiveResultSets=True;App=EntityFramework" />
