--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1539,6 +1539,8 @@
     <Content Include="Views\Manage\EditClassification.cshtml" />
     <Content Include="Views\Home\Reports\27_COVIDPodpora.cshtml" />
     <Content Include="Views\ApiV1\ModalZneplatnenaSmlouva.cshtml" />
+    <Content Include="Views\Home\AnalyzaPrijemcu.cshtml" />
+    <Content Include="Views\Home\AnalyzaStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
