--- a/HlidacStatu.Q.ClassificationRepair/appsettings.json
+++ b/HlidacStatu.Q.ClassificationRepair/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "RabbitMQConnection": {
+    "ConnectionString": "host=10.10.10.10;username=username;password=password"
+  }
 }
