--- a/HlidacStatu.Q.ClassificationRepair/appsettings.json.sample
+++ b/HlidacStatu.Q.ClassificationRepair/appsettings.json.sample
@@ -7,6 +7,6 @@
     }
   },
   "RabbitMQConnection": {
-    "ConnectionString": "host=10.10.10.10;username=username;password=password"
+    "ConnectionString": "host=hostip;username=username;password=password"
   }
 }
