--- a/HlidacStatu.Q.ClassificationRepair/HlidacStatu.Q.ClassificationRepair.csproj
+++ b/HlidacStatu.Q.ClassificationRepair/HlidacStatu.Q.ClassificationRepair.csproj
@@ -4,5 +4,21 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="appsettings.json.sample" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json.sample" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="EasyNetQ" Version="5.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HlidacStatu.Q.Messages\HlidacStatu.Q.Messages.csproj" />
+  </ItemGroup>
+
 
 </Project>
