--- a/HlidacStatu.ClassificationRepair/Properties/launchSettings.json
+++ b/HlidacStatu.ClassificationRepair/Properties/launchSettings.json
@@ -11,17 +11,14 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "HlidacStatu.Q.ClassificationRepair": {
+    "HlidacStatu.ClassificationRepair": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "http://localhost:5000",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
