--- a/HlidacStatu.ClassificationRepair/HlidacStatu.ClassificationRepair.csproj
+++ b/HlidacStatu.ClassificationRepair/HlidacStatu.ClassificationRepair.csproj
@@ -1,7 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>HlidacStatu.ClassificationRepair</AssemblyName>
+    <RootNamespace>HlidacStatu.ClassificationRepair</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="EasyNetQ" Version="5.1.1" />
+    <PackageReference Include="MailKit" Version="2.6.0" />
   </ItemGroup>
 
   <ItemGroup>
