--- a/HlidacStatu.ClassificationRepair/HlidacStatu.ClassificationRepair.csproj
+++ b/HlidacStatu.ClassificationRepair/HlidacStatu.ClassificationRepair.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>HlidacStatu.ClassificationRepair</AssemblyName>
     <RootNamespace>HlidacStatu.ClassificationRepair</RootNamespace>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
