--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -10,6 +10,7 @@
   <package id="Devmasters.Core.cs" version="1.472.2.31" targetFramework="net472" />
   <package id="Devmasters.Imaging" version="1.472.1.1" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
+  <package id="EasyNetQ" version="5.1.1" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="7.6.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="HlidacStatu.Api.Dataset.Connector" version="1.3.3" targetFramework="net472" />
@@ -67,6 +68,7 @@
   <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
+  <package id="RabbitMQ.Client" version="6.0.0" targetFramework="net472" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="Respond" version="1.4.2" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
