--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1551,6 +1551,8 @@
     <Content Include="Views\Data\ImportData.noflat.cshtml" />
     <Content Include="Views\Data\ImportData.mapping.cshtml" />
     <Content Include="Views\Data\ImportDataExcel.cshtml" />
+    <Content Include="Views\Home\KIndex.cshtml" />
+    <Content Include="Views\Home\KIndex.Porovnat.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
