--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -453,7 +453,7 @@
     <Compile Include="Analysis\DataPerYear.cs" />
     <Compile Include="Analysis\ACore.cs" />
     <Compile Include="Analysis\KorupcniRiziko\AdvancedQuery.cs" />
-    <Compile Include="Analysis\KorupcniRiziko\Calculator.Index.cs" />
+    <Compile Include="Analysis\KorupcniRiziko\Calculator.Indexy.cs" />
     <Compile Include="Analysis\KorupcniRiziko\KIndexData.COFOG.cs" />
     <Compile Include="Analysis\KorupcniRiziko\KIndexData.cs" />
     <Compile Include="Analysis\KorupcniRiziko\Calculator.cs" />
