--- a/Lib.Data.External/app.config
+++ b/Lib.Data.External/app.config
@@ -149,13 +149,8 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://adisrws.mfcr.cz/adistc/axis2/services/rozhraniCRPDPH.rozhraniCRPDPHSOAP"
-        binding="basicHttpBinding" bindingConfiguration="rozhraniCRPDPHSOAP"
-        contract="HlidacSmluv.Lib.Data.External.NespolehlivyPlatceDPH.rozhraniCRPDPH"
-        name="rozhraniCRPDPHSOAP" />
-      <endpoint address="https://eagri.cz/ssl/nosso-app/EPO/WS/v2Online/vOKOsrv.ashx"
-        binding="basicHttpBinding" bindingConfiguration="RDM_INF01BBinding"
-        contract="eAgri.DeMinimis.WS.RDM_INF01B" name="RDM_INF01BPort" />
+      <endpoint address="https://adisrws.mfcr.cz/adistc/axis2/services/rozhraniCRPDPH.rozhraniCRPDPHSOAP" binding="basicHttpBinding" bindingConfiguration="rozhraniCRPDPHSOAP" contract="HlidacSmluv.Lib.Data.External.NespolehlivyPlatceDPH.rozhraniCRPDPH" name="rozhraniCRPDPHSOAP" />
+      <endpoint address="https://eagri.cz/ssl/nosso-app/EPO/WS/v2Online/vOKOsrv.ashx" binding="basicHttpBinding" bindingConfiguration="RDM_INF01BBinding" contract="eAgri.DeMinimis.WS.RDM_INF01B" name="RDM_INF01BPort" />
     </client>
   </system.serviceModel>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup>
