--- a/SponzoriLoader/App.config
+++ b/SponzoriLoader/App.config
@@ -61,6 +61,10 @@
         <assemblyIdentity name="OpenTracing" publicKeyToken="61503406977abdaf" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-0.12.1.0" newVersion="0.12.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="HtmlAgilityPack" publicKeyToken="bd319b19eaf3b43a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.11.24.0" newVersion="1.11.24.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
