--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -10,12 +10,12 @@
   <package id="Devmasters.Core.cs" version="1.472.2.31" targetFramework="net472" />
   <package id="Devmasters.Imaging" version="1.472.1.1" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
-  <package id="EasyNetQ" version="5.1.1" targetFramework="net472" />
-  <package id="Elasticsearch.Net" version="7.6.2" targetFramework="net472" />
+  <package id="EasyNetQ" version="5.2.0" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="7.7.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="HlidacStatu.Api.Dataset.Connector" version="1.3.3" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.23" targetFramework="net472" />
-  <package id="IPNetwork2" version="2.5.202" targetFramework="net472" />
+  <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net472" />
+  <package id="IPNetwork2" version="2.5.211" targetFramework="net472" />
   <package id="jQuery" version="3.5.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.1" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
@@ -62,13 +62,13 @@
   <package id="Microsoft.Owin.Security.Twitter" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
-  <package id="Moment.js" version="2.25.2" targetFramework="net472" />
-  <package id="NEST" version="7.6.2" targetFramework="net472" />
+  <package id="Moment.js" version="2.27.0" targetFramework="net472" />
+  <package id="NEST" version="7.7.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
-  <package id="RabbitMQ.Client" version="6.0.0" targetFramework="net472" />
+  <package id="RabbitMQ.Client" version="6.1.0" targetFramework="net472" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="Respond" version="1.4.2" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
@@ -101,6 +101,7 @@
   <package id="System.Text.Encoding.CodePages" version="4.7.1" targetFramework="net472" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net472" />
