--- a/HlidacStatu.ExportData/HlidacStatu.ExportData.csproj
+++ b/HlidacStatu.ExportData/HlidacStatu.ExportData.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="15.0.5" />
     <PackageReference Include="EPPlus" Version="5.2.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
   </ItemGroup>
