--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -91,6 +91,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="EPPlus, Version=5.2.0.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPPlus.5.2.0\lib\net45\EPPlus.dll</HintPath>
+    </Reference>
     <Reference Include="HlidacStatu.Api.Dataset.Connector, Version=1.3.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\HlidacStatu.Api.Dataset.Connector.1.3.3\lib\net462\HlidacStatu.Api.Dataset.Connector.dll</HintPath>
     </Reference>
@@ -197,6 +200,7 @@
     <Reference Include="Postal">
       <HintPath>..\3rd\binaries\Postal.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="RabbitMQ.Client, Version=6.0.0.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
       <HintPath>..\packages\RabbitMQ.Client.6.1.0\lib\net461\RabbitMQ.Client.dll</HintPath>
     </Reference>
@@ -334,6 +338,7 @@
     <Reference Include="System.Threading.Channels, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Channels.4.7.1\lib\net461\System.Threading.Channels.dll</HintPath>
     </Reference>
+    <Reference Include="System.Threading.Tasks" />
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
@@ -1585,6 +1590,10 @@
     <ProjectReference Include="..\..\PrivateInternals\HlidacWebu.CustomMonitors\HlidacWebu.CustomMonitors.csproj">
       <Project>{dda06de1-d9ac-4cff-92d8-a7d051779cff}</Project>
       <Name>HlidacWebu.CustomMonitors</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HlidacStatu.ExportData\HlidacStatu.ExportData.csproj">
+      <Project>{912aae41-60a4-4579-bd7d-fa13fbc423f5}</Project>
+      <Name>HlidacStatu.ExportData</Name>
     </ProjectReference>
     <ProjectReference Include="..\HlidacStatu.Q.Messages\HlidacStatu.Q.Messages.csproj">
       <Project>{cb982580-dd8d-414e-af2d-29d73a06a09d}</Project>
