--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -13,6 +13,7 @@
   <package id="EasyNetQ" version="5.2.0" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="7.7.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="EPPlus" version="5.2.0" targetFramework="net472" />
   <package id="HlidacStatu.Api.Dataset.Connector" version="1.3.3" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net472" />
   <package id="IPNetwork2" version="2.5.211" targetFramework="net472" />
