RPP firmy search

--- a/Lib.Data.External/Lib.Data.External.csproj
+++ b/Lib.Data.External/Lib.Data.External.csproj
@@ -506,13 +506,15 @@
     <Compile Include="Discourse.cs" />
     <Compile Include="eAgri\DeMinimis.Search.cs" />
     <Compile Include="RequestLimiter.cs" />
-    <Compile Include="RPP\osobaros.cs" />
-    <Compile Include="RPP\OVMFull.cs" />
+    <Compile Include="RPP\ISVS.cs" />
+    <Compile Include="RPP\OVM\osobaros.cs" />
+    <Compile Include="RPP\OVM\OVMFull.cs" />
+    <Compile Include="RPP\OVM\Shared.cs" />
     <Compile Include="RPP\ResultList.cs" />
-    <Compile Include="RPP\KategorieOVM.cs" />
-    <Compile Include="RPP\OVMSimple.cs" />
+    <Compile Include="RPP\OVM\KategorieOVM.cs" />
+    <Compile Include="RPP\OVM\OVMSimple.cs" />
     <Compile Include="RPP\RPP.cs" />
-    <Compile Include="RPP\seznamkatprirazenychkovm.cs" />
+    <Compile Include="RPP\OVM\seznamkatprirazenychkovm.cs" />
     <Compile Include="RPP\tmp.cs" />
     <Compile Include="Vazby\FromGraphDb.cs" />
     <Compile Include="Zabbix\ZabAvailability.cs" />
