Revert "Elastic APM out with dependecies"
This reverts commit 3f15ebf33d9664ffaaf129f4ac7e4cb6f6bc3204.

--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -118,7 +118,7 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="*" type="IsapiModule" preCondition="integratedMode,runtimeVersionv4.0" />-->
     </handlers>
     <modules>
-      <!--<add name="ElasticApmModule" type="Elastic.Apm.AspNetFullFramework.ElasticApmModule" preCondition="managedHandler" />-->
+      <add name="ElasticApmModule" type="Elastic.Apm.AspNetFullFramework.ElasticApmModule" preCondition="managedHandler" />
 
       <remove name="WebDAVModule" />
       <remove name="FormsAuthentication" />
