--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
+  <package id="Ben.Demystifier" version="0.1.6" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="bootstrap.less" version="3.4.1" targetFramework="net472" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net472" />
@@ -11,6 +12,9 @@
   <package id="Devmasters.Imaging" version="1.472.1.1" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
   <package id="EasyNetQ" version="5.2.0" targetFramework="net472" />
+  <package id="Elastic.Apm" version="1.6.1" targetFramework="net472" />
+  <package id="Elastic.Apm.AspNetFullFramework" version="1.6.1" targetFramework="net472" />
+  <package id="Elastic.Apm.EntityFramework6" version="1.6.1" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="7.7.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="EPPlus" version="5.2.0" targetFramework="net472" />
@@ -50,6 +54,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Diagnostics.Tracing.TraceEvent" version="2.0.2" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net472" />
