--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -336,12 +336,12 @@
             <bindingRedirect oldVersion="0.0.0.0-1.11.24.0" newVersion="1.11.24.0" />
           </dependentAssembly>
         </assemblyBinding>
-        <!--<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
           <dependentAssembly>
             <assemblyIdentity name="Microsoft.AspNet.TelemetryCorrelation" culture="neutral" publicKeyToken="31bf3856ad364e35" />
             <bindingRedirect oldVersion="0.0.0.0-1.0.8.0" newVersion="1.0.8.0" />
           </dependentAssembly>
-        </assemblyBinding>-->
+        </assemblyBinding>
         <dependentAssembly>
           <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
           <bindingRedirect oldVersion="0.0.0.0-4.3.4" newVersion="4.3.4" />
