--- a/Lib.Data.External/packages.config
+++ b/Lib.Data.External/packages.config
@@ -10,7 +10,7 @@
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
   <package id="Devmasters.Render" version="1.472.1.1" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="7.7.1" targetFramework="net472" />
-  <package id="EMGU.CV" version="3.4.3.3016" targetFramework="net472" />
+  <package id="EMGU.CV" version="3.4.3.3016" targetFramework="net472"  allowedVersions="(,4)" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Enums.NET" version="3.0.3" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net472" />
@@ -27,7 +27,7 @@
   <package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.0" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.NETFramework.ReferenceAssemblies.net472" version="1.0.0" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
-  <package id="Neo4j.Driver" version="1.7.2" targetFramework="net472" />
+  <package id="Neo4j.Driver" version="1.7.2" targetFramework="net472"  allowedVersions="(,4)" />
   <package id="NEST" version="7.7.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net472" />
