--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -11,7 +11,7 @@
   <package id="Devmasters.Render" version="1.472.1.1" targetFramework="net472" />
   <package id="Dynamitey" version="2.0.10.189" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="7.7.1" targetFramework="net472" />
-  <package id="EMGU.CV" version="3.4.3.3016" targetFramework="net472" />
+  <package id="EMGU.CV" version="3.4.3.3016" targetFramework="net472" allowedVersions="(,4)" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Enums.NET" version="3.0.3" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net472" />
