--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
-  <package id="bootstrap" version="3.4.1" targetFramework="net472" allowedVersions="[3.4.1]" />
-  <package id="bootstrap.less" version="3.4.1" targetFramework="net472" allowedVersions="[3.4.1]" />
+  <package id="bootstrap" version="3.4.1" targetFramework="net472" allowedVersions="(,4)" />
+  <package id="bootstrap.less" version="3.4.1" targetFramework="net472" allowedVersions="(,4)" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net472" />
   <package id="CsvHelper" version="15.0.5" targetFramework="net472" />
   <package id="Devmasters.Cache" version="1.472.20.2" targetFramework="net472" />
@@ -38,7 +38,7 @@
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.1" targetFramework="net472" />
-  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.8" targetFramework="net472"  />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.7" targetFramework="net472"  allowedVersions="[1.0.7]" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
